# a2_system_ws

./: .gitattributes  .gitignore  AROC_quadruped_inspection_manuscript_clean.docx  Dockerfile  Gazebo改造执行Prompt.md  README.md  docker-compose.a2.amd64.yml  docker-compose.a2.yml  docker-compose.yml  当前进展总结.md
src/a2_interfaces/: CMakeLists.txt  package.xml
src/a2_nav_test_runner/: PADS_INTEGRATION_PLAN.md  README.md  package.xml  setup.cfg  setup.py
src/a2_nav_test_runner/a2_nav_test_runner/: __init__.py  a2_navcommand_backend.py  goal_loader.py  logger.py  metrics.py  mock_nav2_action_server.py  mock_navcommand_service.py  mock_pose_tf_publisher.py  mock_precision_scenario_runner.py  nav2_action_backend.py  nav_client.py  nav_runtime_diagnosis.py  nav_test_node.py  navigation_precision_analyzer.py  pose_accuracy_recorder.py  pose_monitor.py  runtime_checker.py  runtime_param_dumper.py  single_goal_accuracy_test.py  tf_diagnosis.py  utils.py
src/a2_nav_test_runner/config/: mock_precision_scenarios.yaml  nav_test_config.yaml  nav_test_goals.yaml
src/a2_nav_test_runner/launch/: mock_navigation_test.launch.py  nav_test.launch.py
src/a2_nav_test_runner/results/: a2_navigation_precision_static_scan.md  a2_runtime_check_20260503_184035.md  a2_workspace_scan_report.md  nav_runtime_diagnosis_20260504_121128.md  navigation_precision_root_cause_report_20260504_121159.md  navigation_precision_root_cause_report_20260504_121252.md  static_pose_accuracy_20260504_121144.csv  static_pose_accuracy_summary_20260504_121144.md  tf_diagnosis_20260504_121136.csv  tf_diagnosis_20260504_121136.md
src/a2_system/: CMakeLists.txt  package.xml
src/a2_system/config/: a2_sdk.yaml  dlio_jt128.yaml  jt128_extrinsics.yaml  jt128_front_hesai.yaml  livox_mid360_driver.yaml  localization.yaml  localization_mapping.yaml  localization_nav2.yaml  map_manager.yaml  mid360.yaml  mock_localization.yaml  mock_map.yaml  mock_nav_controller.yaml  motion_limits.yaml  nav2.yaml  nav2_3d.yaml  nav2_stack.yaml  navigate_w_replanning_and_recovery.xml  occupancy_mapper.yaml  slam.yaml  (+15 more)
(+298 files in other folders)
