<?xml version="1.0"?>
<package format="3">
  <name>a2_nav_test_runner</name>
  <version>0.1.0</version>
  <description>A2 navigation interface checker and fixed-goal navigation test runner.</description>
  <maintainer email="dell@example.com">dell</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>a2_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
