<?xml version="1.0"?>
<package format="3">
  <name>a2_system</name>
  <version>0.1.0</version>
  <description>Shared utilities, configuration templates, and host-side tooling for the Unitree A2 system.</description>

  <maintainer email="dell@example.com">dell</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
